@@ -100,16 +100,21 @@ class MDocToHtmlConverter : MDocCommand {
 		}
 		
 		XmlDocument overview = new XmlDocument();
-		overview.Load(opts.source + "/index.xml");
+		string overviewSource = opts.source + "/index.xml";
+		string overviewDest   = opts.dest + "/index." + opts.ext;
+		overview.Load (overviewSource);
 
 		ArrayList extensions = GetExtensionMethods (overview);
 		
 		// Create the master page
 		XsltArgumentList overviewargs = new XsltArgumentList();
-		overviewargs.AddParam("ext", "", opts.ext);
-		overviewargs.AddParam("basepath", "", "./");
-		Generate(overview, overviewxsl, overviewargs, opts.dest + "/index." + opts.ext, template);
-		overviewargs.RemoveParam("basepath", "");
+
+		if (!DestinationIsNewer (overviewSource, overviewDest)) {
+			overviewargs.AddParam("ext", "", opts.ext);
+			overviewargs.AddParam("basepath", "", "./");
+			Generate(overview, overviewxsl, overviewargs, opts.dest + "/index." + opts.ext, template);
+			overviewargs.RemoveParam("basepath", "");
+		}
 		overviewargs.AddParam("basepath", "", "../");
 		
 		// Create the namespace & type pages
@@ -128,9 +133,13 @@ class MDocToHtmlConverter : MDocCommand {
 			if (!d.Exists) d.Create();
 			
 			// Create the NS page
-			overviewargs.AddParam("namespace", "", nsname);
-			Generate(overview, overviewxsl, overviewargs, opts.dest + "/" + nsname + "/index." + opts.ext, template);
-			overviewargs.RemoveParam("namespace", "");
+			string nsDest = opts.dest + "/" + nsname + "/index." + opts.ext;
+			if (!DestinationIsNewer (overviewSource, nsDest) &&
+					!DestinationIsNewer (opts.source + "/ns-" + nsname + ".xml", nsDest)) {
+				overviewargs.AddParam("namespace", "", nsname);
+				Generate(overview, overviewxsl, overviewargs, nsDest, template);
+				overviewargs.RemoveParam("namespace", "");
+			}
 			
 			foreach (XmlElement ty in ns.SelectNodes("Type")) {
 				string typefilebase = ty.GetAttribute("Name");
@@ -146,8 +155,7 @@ class MDocToHtmlConverter : MDocCommand {
 
 				string destfile = opts.dest + "/" + nsname + "/" + typefilebase + "." + opts.ext;
 
-				if (!opts.forceUpdate && File.Exists (destfile) &&
-						File.GetLastWriteTime (typefile) < File.GetLastWriteTime (destfile))
+				if (DestinationIsNewer (typefile, destfile))
 					// target already exists, and is newer.  why regenerate?
 					continue;
 
@@ -257,6 +265,12 @@ class MDocToHtmlConverter : MDocCommand {
 			return d;
 		};
 		return loader;
+	}
+
+	private static bool DestinationIsNewer (string source, string dest)
+	{
+		return !opts.forceUpdate && File.Exists (dest) &&
+			File.GetLastWriteTime (source) < File.GetLastWriteTime (dest);
 	}
 }
 
